# tmux-nerd-icons

./: .gitignore  .shellcheckrc  AGENTS.md  generated-bubble-bar.conf  license.md  nerd-icons.tmux  pyproject.toml  readme.md  todo.md
.claude/plans/: PLAN.md  milestone-0-project-setup.md  milestone-1-tpm-entry.md  milestone-2-helpers.md  milestone-3-yaml-parser.md  milestone-4-ssh-parser.md  milestone-5-icon-resolver.md  milestone-6-format-output.md
scripts/: format_output.sh  helpers.sh  icon_resolver.py  ssh_parser.py  yaml_parser.py
scripts/nerd_icons/: __init__.py  __main__.py  cache.py  parser.py  resolver.py  ssh.py
tests/: test_conformance.sh
